--- a/src/App/Components/Root/styles/root.css
+++ b/src/App/Components/Root/styles/root.css
@@ -1,15 +1,39 @@
 .rootContainer{
-    display: flex;
+    display: grid;
     min-height: 100vh;
-    overflow: scroll;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-content: center;
+    text-align: center;
     background: rgb(64, 87, 95);
 }
 
+.Heading{
+    grid-column:1/5; 
+    background-color:red; 
+}
+.Content{
+    grid-column: 1/4;
+    
+    background-color:lightcoral;
+}
+
+.sideBar{
+    grid-column: 4/5; 
+    background-color: rgb(233, 233, 10);
+
+}
+.userAccount{
+    grid-column: 1/1;
+    background-color: green; 
+}
+
+.footer{
+    grid-column: 1/5;
+    background-color: blue;
+}
 .post{
     background-color:lightcyan; 
     padding:3%;
     margin: 40px;
+}
+.sideBar ,.Content, .userAccount{
+    grid-row:2/8;
 }
