--- a/src/App/Components/Navebar/Components/LogoBox/styles/logo.css
+++ b/src/App/Components/Navebar/Components/LogoBox/styles/logo.css
@@ -1,10 +1,24 @@
 .logoBox{
+    display: flex;
     grid-column:1/2; 
     width:100%;
-    height:100%;
+    height: 60pt;
+    margin-bottom: -190px;
+    background-color: white; 
 }
 
+.discription{
+    color: rgb(6, 54, 109);
+    text-shadow: 3px 3px 3px black;
+}
+.logoName{
+    font-size:40pt;
+    padding-left:20px;
+    color:rgb(9, 90, 59);
+}
 .logo{
-    width:100%;
-    height:100%;
+    width:10px;
+    margin-top: 100px;
+    height:10px;
+    align-self: flex-start;
 }
