--- a/src/App/Components/Navebar/Components/Options/styles/options.css
+++ b/src/App/Components/Navebar/Components/Options/styles/options.css
@@ -2,5 +2,5 @@
     grid-column:2/5;
     height: 100%;
     width: 100%;
-    background-color: rgb(103, 17, 201);
+    background-color: white;
 }
