--- a/src/App/Components/Navebar/styles/naveBar.css
+++ b/src/App/Components/Navebar/styles/naveBar.css
@@ -1,5 +1,8 @@
 .naveBar{
+    position: sticky;
+    background-position-x: 2px ;
+    background-position-y: 2px;
     display:grid;
-    height:100%; 
+    height:60pt; 
     background-color:lightblue;
 }
