--- a/src/App/Components/Contents/styles/Contents.css
+++ b/src/App/Components/Contents/styles/Contents.css
@@ -6,3 +6,23 @@
     -webkit-overflow-scrolling: auto;
     background-color: rgb(130, 69, 180);
 }
+
+
+.mainContent{
+    width: 0%;
+    height:100%;
+    background-color: rgb(4, 121, 57);
+    color:white;
+    animation:MainContent 0.5s ease-in-out forwards; 
+}
+
+
+@keyframes MainContent{
+
+    from{
+        width:0%;
+    }
+    to{
+        width:100%;
+    }
+}
