--- a/src/App/Components/Contents/styles/Contents.css
+++ b/src/App/Components/Contents/styles/Contents.css
@@ -3,16 +3,18 @@
     width:100%;
     overflow-y: scroll;
     height: 100%;
+   scroll-behavior:smooth;
     -webkit-overflow-scrolling: auto;
-    background-color: rgb(130, 69, 180);
+    background-color: rgb(2, 2, 2);
 }
 
 
 .mainContent{
     width: 0%;
     height:100%;
-    background-color: rgb(4, 121, 57);
-    color:white;
+    background-color:rgb(164, 170, 167);
+    display:flex;
+    flex-direction: column;
     animation:MainContent 0.5s ease-in-out forwards; 
 }
 
@@ -26,3 +28,4 @@
         width:100%;
     }
 }
+
