Added postCreate Editor type-p component

--- a/src/App/Components/Posts/Components/createPost/styles/createPost.css
+++ b/src/App/Components/Posts/Components/createPost/styles/createPost.css
@@ -1,6 +1,7 @@
 .createPost{
     display:flex;
+    flex-direction: column;
     background-color:rgb(189, 170, 170);
-    width:100%;
+    width:70vw;
     height:100%;
 }
